--- a/fine_tune_DistilBERT.ipynb
+++ b/fine_tune_DistilBERT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyPqw4yhwoW7CXzs+lZuEtS7",
+      "authorship_tag": "ABX9TyOXD31YRRGPdi+4eR9dSRU7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1057,6 +1057,20 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Nahuel990/news250-open/blob/main/fine_tune_DistilBERT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!jupyter nbconvert --ClearOutputPreprocessor.enabled=True \\\n",
+        "                   --clear-metadata \\\n",
+        "                   --to notebook tu_notebook.ipynb \\\n",
+        "                   --output tu_notebook.ipynb"
+      ],
+      "metadata": {
+        "id": "9KuIXSsnKoEY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
