--- a/fine_tune_DistilBERT.ipynb
+++ b/fine_tune_DistilBERT.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "A100",
-      "authorship_tag": "ABX9TyPqw4yhwoW7CXzs+lZuEtS7",
-      "include_colab_link": true
+      "gpuType": "A100"
     },
     "kernelspec": {
       "name": "python3",
@@ -1048,16 +1046,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Nahuel990/news250-open/blob/main/fine_tune_DistilBERT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
